@@ -1,7 +1,21 @@
-AUX ja2-stracciatella.png 1201 RMD160 06a00b959740f456d484bef19f0f043965434302 SHA1 7a57ed479c5a9973aef783186f283211e4827568 SHA256 92fedf7be72da5ecbd8d7f41140dd447c433de54e9b51ce835e50bc3d6ab599c
-AUX ja2-wrapper.sh 319 RMD160 051cf0c341902f4633d3765f422fa8a5509b6344 SHA1 212b2e70a30394a6f696bad8dde3e4eba5d6fb98 SHA256 840ba7a569334a04088464f25c92e46de125c8cf75d1c65e2d783bdd5c7a1716
-DIST ja2-0.12.1-source.tar.bz2 2305303 RMD160 17a1c3930ef73815fd7cf399c95518738db201a5 SHA1 3144e4f5ba08a4edfed728b0fa37ea54cf8b159e SHA256 c29bef2b4ba3f28b808b18d3d4c4388be85f255e9c6d9c355b8080de33fc18d1
-EBUILD ja2-stracciatella-0.12.1.ebuild 1639 RMD160 221c97996c0ebc0ac0ba28e938c8425146f7892e SHA1 5371aa5d858c2f3366cc1609ec64a1d8374207ae SHA256 44b4edc6d91211e633676b1e87d9ade2c5a41de9e6ac84b904fe1e240c183320
-EBUILD ja2-stracciatella-9999.ebuild 1636 RMD160 3a8b1396bed4ae374ee77b0107be98aa8f2d9453 SHA1 88e1244550e7fa36592db06affe7b4ffcce89fc9 SHA256 0b4de131f455a201dcc55568b5981057695793e6edd02d09bf6ff0afcfb83f82
-MISC ChangeLog 1374 RMD160 14e1bf12ba0771446d2547afa7313f896aaa5e36 SHA1 d7b81be2cf42741cb3a70390e5f5c8a3e2d59b46 SHA256 24635c45a1456217be43637433ba3a869627c894a214bccc3ca5c7423b5729e8
-MISC metadata.xml 247 RMD160 e6b25bfa3980cc1cc9e732b67f457fe2a2e9863c SHA1 4353118d4852f2d7ba4ccbbbb06bbf9fcfd25d24 SHA256 883dd20701cb074b79a6a73acfa6f7e6c5a0dcafba8f506da3ac324327300d68
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST ja2-0.12.1-source.tar.bz2 2305303 SHA256 c29bef2b4ba3f28b808b18d3d4c4388be85f255e9c6d9c355b8080de33fc18d1
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.20 (GNU/Linux)
+
+iQIcBAEBCAAGBQJRsk70AAoJEEMpAov1cw9lQCwP/1D4nrYI45mRxft9sc4bwerv
+KaqZvnMAW6IAu8ZC2TRJ0P5LfNitYIOyjYhpftgrX7xjIGeL562a94ZoamS05ugv
+JSUPjBlCUzor1HtL8+rxnXgg1omAZ1NnsWMeji85B+3UC5zZIFJGVEi1LVfQ+mDN
+4MBb93GeryiMd5MFOcZvpLXnrXwt6c0OSkfTq4mxCAMDMtyY7+kQmMHg6qeNUFWV
+/MIaQ5wmTnAk4Ekyd3Qbs5FQlbC1QYaQARL9aBavadeP/rg7FeS5IzrpPAhsRsjo
+TKsCaXzF5AciswdiI/vN+xSW21G9Y+b/Zm+v+26+ov4GhAxyFf/kG4ZVxozFafJe
+NI7aq0N0fyRcSexi1Exqm0AbMZn4G9shcCajXVuBpz3DI2jJ7uDFeGXM8W+PyBfk
++uBQnkEbejxcq5aTsyHGyb5Sbe9Abnz8cPLJm+LkGIN3VjjxNrn5048sB/eh5r+S
+jzB7515UWC0h3xOSA5fb7iFyLHYqxp3xAepGNAvUXoDs3ZeCkATRenQi3/nQo5MZ
+fIl5XzIYnNj25m8oA/Gbdr0GrYemu3d+UECdCJ5xfOs7Im4cfVXQAGYFWATkHjXc
+KeLUu5pxBVIt7CI8h5+MZoXHTbkf8tKB9XYrWyFQ0LbHSQHjYHcFxjU2T31fRr5z
+5PUTmfn2p6Bin6DsPQOu
+=X+0l
+-----END PGP SIGNATURE-----
