@@ -3,8 +3,11 @@
 <pkgmetadata>
 	<herd></herd>
 	<maintainer>
-		<email>lazy_bum@o2.pl</email>
+		<email>szarpaj@grubelek.pl</email>
 		<name>Piotr Szymaniak</name>
 	</maintainer>
+	<use>
+		<flag name="linguas_ru_gold">Russian from Gold edition</flag>
+	</use>
 </pkgmetadata>
 
