@@ -1,5 +1,8 @@
 # ChangeLog for games-strategy/ja2-stracciatella
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+
+  07 Jun 2013; Piotr Szymaniak <szarpaj@grubelek.pl> metadata.xml:
+  games-strategy/ja2-stracciatella: Updated metadata.
 
   22 Nov 2010; Piotr Szymaniak <lazy_bum@o2.pl>
   ja2-stracciatella-0.12.1.ebuild, ja2-stracciatella-9999.ebuild:
